Version 0.8.18   - XXX
  * Fix crash when using keyword arguments with builtin methods
  * Add --keepgoing option to ignore import errors
  * Add --findevil option to make it easier to find objects that crash the interpreter
  * Add support for Python 2.5

Version 0.8.17   - 3 February 2006
  * Fix spurious warning for Statement with no effect using bit shifts
  * Add -#/--limit command line option to set the max # of warnings to show
  * Remove broken command line options:  -e/--errors, --complexity
  * Add -e/--level command line options which allows the error level
    to be specified:  error, security, warning, unused, deprecated, style.
    These names map to numbers: 90, 90, 70, 50, 40, 10 (error == security).
    Specifying a value means all levels equal to or greater than it.
  * Add --only option which displays warnings only for files specified
    on the command line
  * Add --evil option for users to prevent the interpreter from crashing
    due to broken C extensions
  * Fix wrong file name when warning about returning values from
    __init__ functions. (#1291116)
  * Fix a few more glitches with setup.py.
  * Suppress warning about integer division when the code is: int(x / y)
  * Add code to skip testing objects from extension modules that are
    known to crash the interpreter.  Currently, the list includes old versions of
    matplotlib.axes.BinOpType and wx.TheClipboard.
  * Support ROT_THREE and ROT_FOUR opcodes

Version 0.8.16   - 4 September 2005
  * Fix problems installing on Windows and running setup.py build

Version 0.8.15   - 31 August 2005
  * Fix spurious warning about catching string exceptions
  * Don't barf if there is # -*- encoding: ... -*- lines and unicode strings
  * setup.py was rewritten to honor --root, --home, etc options
  * Fix internal error on processing nested scopes
  * Fix constant tuples in Python 2.4
  * Don't warn about implicit/explicit returns in Python 2.4, we can't tell